# SplitWords

./: CMakeLists.txt  readme.md
cmake/: jsoncpp.cmake
include/: split_words.h
src/: split_words.cpp
test/: test.cpp  test_jb.cpp
